--- a/SmartLibrary/Views/Pages/EditBook.xaml
+++ b/SmartLibrary/Views/Pages/EditBook.xaml
@@ -11,8 +11,8 @@
     Title="EditBook"
     d:DataContext="{d:DesignInstance local:EditBook,
                                      IsDesignTimeCreatable=False}"
-    d:DesignHeight="650"
-    d:DesignWidth="800"
+    d:DesignHeight="700"
+    d:DesignWidth="1180"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
@@ -51,27 +51,35 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0">
-                        <ui:TextBlock
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            FontSize="16"
-                            Text="书籍图片" />
-                        <ui:Image
-                            Width="180"
-                            Height="260"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            RenderOptions.BitmapScalingMode="HighQuality"
-                            Source="{Binding ViewModel.Picture, Converter={StaticResource StringToImageSourceConverter}, Mode=OneWay}"
-                            Stretch="UniformToFill" />
-                        <ui:Button
-                            Width="180"
-                            Height="260"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Background="Transparent"
-                            Command="{Binding ViewModel.SelectPictureButtonClickCommand, Mode=OneWay}"
-                            Cursor="Hand" />
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.06*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="0.06*" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.5*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="0.5*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid Grid.Row="1" Grid.Column="1">
+                            <ui:TextBlock
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                FontSize="18"
+                                Text="书籍图片" />
+                            <ui:Image
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                RenderOptions.BitmapScalingMode="HighQuality"
+                                Source="{Binding ViewModel.Picture, Converter={StaticResource StringToImageSourceConverter}, Mode=OneWay}"
+                                Stretch="UniformToFill" />
+                            <ui:Button
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Background="Transparent"
+                                Command="{Binding ViewModel.SelectPictureButtonClickCommand, Mode=OneWay}"
+                                Cursor="Hand" />
+                        </Grid>
                     </Grid>
                     <ScrollViewer
                         Grid.Row="1"
@@ -79,7 +87,7 @@
                         extensions:ScrollAnimationBehavior.PointsToScroll="16"
                         extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
                         <Grid
-                            Margin="32,0,32,0"
+                            Margin="32,16,32,0"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Top">
                             <Grid.RowDefinitions>
@@ -127,7 +135,8 @@
                             Appearance="Primary"
                             Command="{Binding ViewModel.EditBookButtonClickCommand, Mode=OneWay}"
                             Content="更改"
-                            FontSize="24" />
+                            FontSize="24"
+                            IsEnabled="{Binding ViewModel.IsEditButtonEnabled, Mode=OneWay}" />
                         <ui:Button
                             Grid.Column="1"
                             Margin="8,0,0,0"
@@ -170,6 +179,7 @@
                                         FontSize="80"
                                         MaxLength="2"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.ShelfNum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </StackPanel>
                                 <Grid Grid.Column="1">
@@ -227,6 +237,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.BookName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                         TextWrapping="Wrap" />
                                 </Grid>
@@ -244,6 +255,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.Author, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                         TextWrapping="Wrap" />
                                 </Grid>
@@ -271,6 +283,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.Press, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                         TextWrapping="Wrap" />
                                 </Grid>
@@ -288,6 +301,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.PressDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                         TextWrapping="Wrap" />
                                 </Grid>
@@ -306,6 +320,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.PressPlace, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                         TextWrapping="Wrap" />
                                 </Grid>
@@ -334,6 +349,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.Price, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                     <ui:TextBlock
                                         Grid.Column="2"
@@ -357,6 +373,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.Pages, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                                 <Grid Margin="0,6,0,0">
@@ -372,6 +389,7 @@
                                         Grid.Column="1"
                                         BorderThickness="0"
                                         FontSize="18"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.Words, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                             </StackPanel>
@@ -397,6 +415,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.ClcName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                                 <Grid Margin="0,6,0,0">
@@ -413,6 +432,7 @@
                                         BorderThickness="0"
                                         FontSize="18"
                                         PreviewKeyDown="TextBox_PreviewKeyDown"
+                                        PreviewTextInput="TextBox_PreviewTextInput"
                                         Text="{Binding ViewModel.Language, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                                 <ui:TextBlock
@@ -424,6 +444,7 @@
                                     AcceptsReturn="True"
                                     BorderThickness="0"
                                     FontSize="18"
+                                    PreviewTextInput="TextBox_PreviewTextInput"
                                     Text="{Binding ViewModel.BookDesc, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                     TextWrapping="Wrap" />
                             </StackPanel>
