--- a/SmartLibrary/App.xaml
+++ b/SmartLibrary/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="pack://application:,,,/Style/MyButton.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:StringToImageSourceConverter x:Key="StringToImageSourceConverter" />
+            <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
