--- a/SmartLibrary/Views/Pages/AddBook.xaml
+++ b/SmartLibrary/Views/Pages/AddBook.xaml
@@ -24,6 +24,7 @@
         <Style BasedOn="{StaticResource MyButtonStyle}" TargetType="ui:Button" />
         <converters:BoolToImageSourceConverter x:Key="BoolToImageSourceConverter" />
         <converters:BookExistedConverter x:Key="BookExistedConverter" />
+        <converters:BoolToLadingPictureTextConverter x:Key="BoolToLadingPictureTextConverter" />
     </Page.Resources>
 
     <Grid Margin="16">
@@ -65,7 +66,7 @@
                 Height="40"
                 Margin="6,0,0,0"
                 RenderOptions.BitmapScalingMode="HighQuality"
-                Source="{Binding ViewModel.IsbnAttitudeImage, Converter={StaticResource StringToImageSourceConverter}, Mode=OneWay}"
+                Source="{Binding ViewModel.IsbnAttitudeImage, Mode=OneWay}"
                 Visibility="{Binding ViewModel.IsbnAttitudeVisible, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
             <ui:Button
                 Grid.Column="3"
@@ -130,7 +131,7 @@
                 CornerRadius="4">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="2*" />
+                        <RowDefinition Height="1.5*" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
@@ -146,11 +147,17 @@
                             <ColumnDefinition Width="0.5*" />
                         </Grid.ColumnDefinitions>
                         <Grid Grid.Row="1" Grid.Column="1">
-                            <ui:TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="18"
-                                Text="书籍图片" />
+                            <StackPanel VerticalAlignment="Center">
+                                <ui:ProgressRing
+                                    Margin="0,0,0,8"
+                                    IsIndeterminate="{Binding ViewModel.IsPictureLoading, Mode=OneWay}"
+                                    Visibility="{Binding ViewModel.IsPictureLoading, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
+                                <ui:TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="18"
+                                    Text="{Binding ViewModel.IsPictureLoading, Converter={StaticResource BoolToLadingPictureTextConverter}, Mode=OneWay}" />
+                            </StackPanel>
                             <ui:Image
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch"
@@ -162,7 +169,8 @@
                                 VerticalAlignment="Stretch"
                                 Background="Transparent"
                                 Command="{Binding ViewModel.SelectPictureButtonClickCommand, Mode=OneWay}"
-                                Cursor="Hand" />
+                                Cursor="Hand"
+                                IsEnabled="{Binding ViewModel.IsPictureLoading, Converter={StaticResource InverseBooleanConverter}, Mode=OneWay}" />
                         </Grid>
                     </Grid>
                     <ScrollViewer
@@ -233,7 +241,7 @@
             </Border>
             <ScrollViewer
                 Grid.Column="1"
-                Margin="12,0,0,0"
+                Margin="8,0,0,0"
                 extensions:ScrollAnimationBehavior.IsEnabled="True"
                 extensions:ScrollAnimationBehavior.PointsToScroll="16"
                 extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
