--- a/SmartLibrary/Views/Pages/EditBook.xaml
+++ b/SmartLibrary/Views/Pages/EditBook.xaml
@@ -22,6 +22,7 @@
     <Page.Resources>
         <Style BasedOn="{StaticResource MyButtonStyle}" TargetType="ui:Button" />
         <converters:BoolToImageSourceConverter x:Key="BoolToImageSourceConverter" />
+        <converters:BoolToLadingPictureTextConverter x:Key="BoolToLadingPictureTextConverter" />
     </Page.Resources>
 
     <Grid Margin="16">
@@ -62,11 +63,17 @@
                             <ColumnDefinition Width="0.5*" />
                         </Grid.ColumnDefinitions>
                         <Grid Grid.Row="1" Grid.Column="1">
-                            <ui:TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="18"
-                                Text="书籍图片" />
+                            <StackPanel VerticalAlignment="Center">
+                                <ui:ProgressRing
+                                    Margin="0,0,0,8"
+                                    IsIndeterminate="{Binding ViewModel.IsPictureLoading, Mode=OneWay}"
+                                    Visibility="{Binding ViewModel.IsPictureLoading, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
+                                <ui:TextBlock
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="18"
+                                    Text="{Binding ViewModel.IsPictureLoading, Converter={StaticResource BoolToLadingPictureTextConverter}, Mode=OneWay}" />
+                            </StackPanel>
                             <ui:Image
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch"
@@ -78,7 +85,8 @@
                                 VerticalAlignment="Stretch"
                                 Background="Transparent"
                                 Command="{Binding ViewModel.SelectPictureButtonClickCommand, Mode=OneWay}"
-                                Cursor="Hand" />
+                                Cursor="Hand"
+                                IsEnabled="{Binding ViewModel.IsPictureLoading, Converter={StaticResource InverseBooleanConverter}, Mode=OneWay}" />
                         </Grid>
                     </Grid>
                     <ScrollViewer
@@ -149,7 +157,7 @@
             </Border>
             <ScrollViewer
                 Grid.Column="1"
-                Margin="12,0,0,0"
+                Margin="8,0,0,0"
                 extensions:ScrollAnimationBehavior.IsEnabled="True"
                 extensions:ScrollAnimationBehavior.PointsToScroll="16"
                 extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
