--- a/SmartLibrary/Views/Pages/EditBook.xaml
+++ b/SmartLibrary/Views/Pages/EditBook.xaml
@@ -22,7 +22,6 @@
     <Page.Resources>
         <Style BasedOn="{StaticResource MyButtonStyle}" TargetType="ui:Button" />
         <converters:BoolToImageSourceConverter x:Key="BoolToImageSourceConverter" />
-        <converters:BoolToLadingPictureTextConverter x:Key="BoolToLadingPictureTextConverter" />
     </Page.Resources>
 
     <Grid Margin="16">
@@ -72,7 +71,7 @@
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     FontSize="18"
-                                    Text="{Binding ViewModel.IsPictureLoading, Converter={StaticResource BoolToLadingPictureTextConverter}, Mode=OneWay}" />
+                                    Text="{Binding ViewModel.PictureLoadingText, Mode=OneWay}" />
                             </StackPanel>
                             <ui:Image
                                 HorizontalAlignment="Stretch"
