--- a/SmartLibrary/Views/Pages/Home.xaml
+++ b/SmartLibrary/Views/Pages/Home.xaml
@@ -16,30 +16,19 @@
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     mc:Ignorable="d">
 
-    <Grid Margin="16">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="2*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ui:InfoBar
-            Title="消息提示"
-            Grid.Row="0"
-            IsClosable="False"
-            IsOpen="True"
-            Message="当前使用的程序版本为测试版本，可能会有各种各样不可言明的Bug，遇到问题请理性反馈，谢谢。"
-            Severity="Warning" />
-        <Border
-            Grid.Row="1"
-            Margin="0,8,0,0"
-            CornerRadius="8">
+        <Border Grid.Row="0" CornerRadius="8,0,0,0">
             <Border.Background>
                 <ImageBrush
                     ImageSource="pack://application:,,,/Assets/background.jpg"
                     RenderOptions.BitmapScalingMode="HighQuality"
                     Stretch="UniformToFill" />
             </Border.Background>
-            <Border CornerRadius="8">
+            <Border CornerRadius="8,0,0,0">
                 <Border.Background>
                     <RadialGradientBrush>
                         <GradientStop Offset="0" Color="#1F000000" />
@@ -50,25 +39,45 @@
                     <StackPanel
                         Margin="48,0"
                         HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        Background="Transparent">
+                        VerticalAlignment="Center">
                         <ui:TextBlock
                             FontSize="48"
                             FontTypography="TitleLarge"
                             Foreground="#FFFFFF"
-                            Text="智慧图书馆" />
+                            Text="智慧图书馆">
+                            <TextBlock.Effect>
+                                <DropShadowEffect
+                                    BlurRadius="12"
+                                    Direction="240"
+                                    ShadowDepth="4" />
+                            </TextBlock.Effect>
+                        </ui:TextBlock>
                         <ui:TextBlock
                             FontTypography="Subtitle"
-                            Foreground="#B7FFFFFF"
-                            Text="Manage books intelligently" />
+                            Foreground="#FFFFFF"
+                            Text="Manage books intelligently">
+                            <TextBlock.Effect>
+                                <DropShadowEffect
+                                    BlurRadius="8"
+                                    Direction="240"
+                                    ShadowDepth="3" />
+                            </TextBlock.Effect>
+                        </ui:TextBlock>
                         <ui:TextBlock
                             FontSize="16"
                             FontTypography="BodyStrong"
-                            Foreground="#B7FFFFFF"
-                            Text="by using Smart Library System on Windows." />
+                            Foreground="#FFFFFF"
+                            Text="by using Smart Library System on Windows.">
+                            <TextBlock.Effect>
+                                <DropShadowEffect
+                                    BlurRadius="8"
+                                    Direction="240"
+                                    ShadowDepth="3" />
+                            </TextBlock.Effect>
+                        </ui:TextBlock>
                     </StackPanel>
                     <ui:TextBlock
-                        Margin="12"
+                        Margin="0,0,12,8"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Bottom"
                         FontTypography="Caption"
@@ -77,7 +86,7 @@
                 </Grid>
             </Border>
         </Border>
-        <StackPanel Grid.Row="2" Margin="0,16,0,0">
+        <StackPanel Grid.Row="1" Margin="16,16,16,0">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
